--- a/posts/I/sequence/learning_objective.qmd
+++ b/posts/I/sequence/learning_objective.qmd
@@ -1,43 +1,57 @@
 ---
 title: "학습목표"
-description: "2015 개정  -  수학I  -  수열"
+description: "수학I  -  수열  -  2015년 개정"
 date: "2025-01-18"
 date-modified: "2025-01-18"
-categories: [수학I, 수열, 학습목표]
+categories: [수학I, 수열, 학습목표, 2015년 개정]
+toc-depth: 4
 ---
 
-## Ⅲ. 수열
+### 수열
 
-### ● 용어
+수열은 규칙적으로 나열된 수로 나타낼 수 있는 현상을 탐구하는 데 유용한 함수이다.
+수열을 통해 자연 현상이나 사회 현상에 내재되어 있는 다양한 규칙성을 찾아 일반화된 식으로 표현하고 수학적으로 정당화함으로써 수학의 유용성과 가치를 경험하고 귀납적 추론 능력과 연역적 추론 능력을 기를 수 있다.
 
--   수열, 항, 일반항, 공차, 등차수열, 등차중항, 공비, 등비수열, 등비중항, 귀납적 정의, 수학적 귀납법 $$a_n,{a_n},\sum_{k=1}^n a_k,p(n)$$
+#### 1. 등차수열과 등비수열
 
-### 1. 등차수열과 등비수열
+-   \[12수학Ⅰ03-01\]수열의 뜻을 안다.
+-   \[12수학Ⅰ03-02\]등차수열의 뜻을 알고, 일반항, 첫째항부터 제$n$항까지의 합을 구할 수 있다.
+-   \[12수학Ⅰ03-03\]등비수열의 뜻을 알고, 일반항, 첫째항부터 제$n$항까지의 합을 구할 수 있다.
 
--   수열의 뜻을 안다.
--   **등차수열**의 뜻을 알고, 일반항, 첫째항부터 제 (n)항까지의 합을 구할 수 있다.
--   **등비수열**의 뜻을 알고, 일반항, 첫째항부터 제 (n)항까지의 합을 구할 수 있다.
+#### 2. 수열의 합
 
-### 2. 수열의 합
+-   \[12수학Ⅰ03-04\]$\Sigma$의 뜻을 알고, 그 성질을 이해하고, 이를 활용할 수 있다.
+-   \[12수학Ⅰ03-05\]여러 가지 수열의 첫째항부터 제$n$항까지의 합을 구할 수 있다.
 
--   $\Sigma$의 뜻을 알고, 그 성질을 이해하고, 이를 활용할 수 있다.
--   여러 가지 수열의 첫째항부터 제 (n)항까지의 합을 구할 수 있다.
+#### 3. 수학적 귀납법
 
-### 3. 수학적 귀납법
+-   \[12수학Ⅰ03-06\]수열의 귀납적 정의를 이해한다.
+-   \[12수학Ⅰ03-07\]수학적 귀납법의 원리를 이해한다.
+-   \[12수학Ⅰ03-08\]수학적 귀납법을 이용하여 명제를 증명할 수 있다.
 
--   수열의 귀납적 정의를 이해한다.
--   수학적 귀납법의 원리를 이해한다.
--   수학적 귀납법을 이용하여 명제를 증명할 수 있다.
+### 학습요소
 
-### \<교수･학습 및 평가 방법 유의사항\>
+-   수열
+-   항
+-   일반항
+-   공차
+-   등차수열
+-   등차중항
+-   공비
+-   등비수열
+-   등비중항
+-   귀납적 정의
+-   수학적 귀납법
+-   $a_n$
+-   ${a_n}$
+-   $$\sum_{k=1}^n a_k$$
 
-1.  **여러 가지 수열의 합**
-    -   자연수의 거듭제곱의 합 $$ \sum_{k=1}^n k,\sum_{k=1}^n k^2, \sum_{k=1}^n k^3 $$ 과 수열의 합이 간단한 것만 다룬다.
-    -   수열과 관련된 여러 가지 문제를 귀납적으로 표현할 수 있게 하고, 귀납적으로 정의된 수열의 일반항을 구하는 문제는 다루지 않는다.
-2.  **수학적 귀납법에 의한 증명**
-    -   원리를 이해할 수 있는 정도로 간단하게 다룬다.
-    -   수학적 귀납법은 자연수 (n)에 대한 명제의 증명 방법으로서 그 유용성과 가치를 인식하게 한다.
-3.  **기호 사용**
-    -   $S_{n}$ 기호는 교수･학습 상황에서 사용할 수 있다.
-4.  **문제 해결 능력 평가**
-    -   등비수열과 그 합을 이용하여 문제를 해결할 수 있는 능력을 평가할 때, 연금의 일시 지급이나 대출금 상환 등과 같이 지나치게 복잡한 상황을 포함하는 문제는 다루지 않는다.
+### 교수･학습 방법 및 유의 사항
+- 여러 가지 수열의 합에서는 자연수의 거듭제곱의 합 $$ \sum_{k=1}^n k,\sum_{k=1}^n k^2, \sum_{k=1}^n k^3 $$ 과 수열의 합이 간단한 것만 다룬다.
+-   수열과 관련된 여러 가지 문제를 귀납적으로 표현할 수 있게 하고, 귀납적으로 정의된 수열의 일반항을 구하는 문제는 다루지 않는다.
+-  수학적 귀납법에 의한 증명은 원리를 이해할 수 있는 정도로 간단하게 다룬다. 
+- 수학적 귀납법은 자연수 $n$에 대한 명제의 증명 방법으로서 그 유용성과 가치를 인식하게 한다.
+- $S_{n}$ 기호는 교수･학습 상황에서 사용할 수 있다.
+
+### 평가 방법 및 유의 사항
+-   등비수열과 그 합을 이용하여 문제를 해결할 수 있는 능력을 평가할 때, 연금의 일시 지급이나 대출금 상환 등과 같이 지나치게 복잡한 상황을 포함하는 문제는 다루지 않는다.
